fix collapse arrow alignment on sidebar

--- a/Site/webapp/wdkCustomization/js/client/components/RecordPage/RecordPage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/RecordPage/RecordPage.scss
@@ -6,10 +6,10 @@
 //wdk resets and overrides
 ///
 .wdk-RecordContainer {
-  #_ideogramInnerWrap {
-    overflow-x: auto !important;
-  }
- /* .wdk-RecordSidebar,
+    #_ideogramInnerWrap {
+        overflow-x: auto !important;
+    }
+    /* .wdk-RecordSidebar,
   .wdk-RecordMain {
     *,
     *::before,
@@ -21,10 +21,15 @@
       font-size: inherit;
     }
   }
-  .wdk-RecordSidebarToggle {
-    right: -45px;
-    font-size: 1.1rem;
-  }
+  */
+    .wdk-RecordSidebar {
+        top: 10px;
+        button.wdk-RecordSidebarToggle {
+            top: 2px;
+        }
+    }
+
+    /*
   .wdk-RecordSubsectionContent {
     .section-summary-text {
       margin-top: 50px;
